--- a/public_html/assign09.html
+++ b/public_html/assign09.html
@@ -4,7 +4,28 @@
     <title>Assignment 09</title>
 </head>
 <body>
-<p style="text-align: center">This will be assignment #09</p>
+
+<div id="section_1">
+    <div id="s1_elements">
+        <button id="canada">Canada</button>
+        <button id="mexico">Mexico</button>
+        <button id="russia">Russia</button>
+        <button id="usa">United States of America</button>
+    </div>
+    <div id="s1_data">
+        <table id="s1_results"></table>
+    </div>
+</div>
+
+<hr>
+
+<div id="section_2">
+    <input type="text" id="dataUrl">
+    <button id="dataFetch">Submit</button>
+</div>
+
 
 </body>
 </html>
+
+<!--TODO: Create and validate AJAX calls-->
