--- a/public_html/assign10.html
+++ b/public_html/assign10.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="assets/js/10.js"></script>
     <title>Assignment 10</title>
 </head>
 <body>
-<p style="text-align: center">This will be assignment #10</p>
+<div id="response">Loading ...</div>
 
 </body>
 </html>
